Add Docker simple support and more descriptions